# nti-discord-bot

./: .gitignore  Cargo.toml
src/: main.rs
