[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
lazy_static = "1.4.0"
serenity = { version = "0.10.10", features = ["unstable_discord_api"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.32"
